# risk-model-mvp

./: README.md  main.py  mvp.py  pyproject.toml
.continue/prompts/: mvp_risk.prompt
test/: test_fred_api.py
