[project]
name = "risk-model-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "fredapi>=0.5.2",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
]
